--- a/QT_hello_world_cs/scene.ui
+++ b/QT_hello_world_cs/scene.ui
@@ -31,6 +31,9 @@
    <property name="text">
     <string>离开</string>
    </property>
+   <property name="shortcut">
+    <string>Del</string>
+   </property>
   </widget>
  </widget>
  <resources/>
